[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/CodeSaver.otf" type="DynamicFontData" id=1]
[ext_resource path="res://computer3.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.756863 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 4.44696
margin_top = -3.41647
margin_right = 1028.45
margin_bottom = 596.583
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 827.841
margin_top = 550.715
margin_right = 981.841
margin_bottom = 605.715
custom_fonts/font = SubResource( 2 )
text = "(press Q to come back)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="TextEdit" parent="."]
margin_left = 69.0
margin_top = 69.0
margin_right = 696.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 3 )
text = "FUNCTION SETUP(){
	INIT_VENTILATION_SYS()
	INIT_GATES()
	INIT_EARTH_COMMUNICATION()
}
FUNCTION MAIN() {
	WHILE(NOT TRUE) {
		CHECK_GRAVITY_SUBROUTINE()
		CHECK_LIGHT_SUBROUTINE()
		CHECK_FOOD_TEMPRATURE_SUBROUTINE()
		CHECK_INTERNAL_PRESSURE()
		CHECK_EARTH_SIGNALS()
	}
}"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 72.5416
margin_top = 28.541
margin_right = 207.542
margin_bottom = 49.541
custom_fonts/font = SubResource( 4 )
text = "main.gmtk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 627.901
margin_top = 523.251
margin_right = 695.901
margin_bottom = 562.251
custom_fonts/font = SubResource( 5 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="load_root_scene3" from="." to="." method="_on_Node2D_load_root_scene3"]
[connection signal="win_scene" from="." to="." method="_on_Node2D_win_scene"]
